# vortex-stonefish-sim

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  dependencies.repos  package.xml
drones/: orca.scn
metadata/: looks.scn
scenarios/: demo_world.scn  docking.scn
scripts/: ci_install_dependencies.sh  freya_check_goal.py  freya_launch.sh  freya_send_goal.py  freya_sim_test.sh  install_stonefish.sh  orca_launch.sh  send_goal.py  simulator_test.sh  tacc_launch.sh
stonefish_sim/: CMakeLists.txt  package.xml
stonefish_sim/config/: box_config.yaml  cave_config.yaml  default_config.yaml  docking_config.yaml  drone.yaml  pipeline_config.yaml  structure_config.yaml  tacc_config.yaml
stonefish_sim/config/defaults/: fls.yaml
stonefish_sim/data/: README.md
stonefish_sim/data/moby/: final_collision.blend
stonefish_sim/data/object_files/seafloor_box/: north_wall.mtl  seabed.mtl  south_wall.mtl  west_wall.mtl
stonefish_sim/data/object_files/tacc_seafloor/: tacc_seafloor.mtl
stonefish_sim/data/objects/tacc_seafloor/: tacc-seabed.mtl
stonefish_sim/drones/: README.md  camera_rig.scn  cyberfish.scn  freya.scn  freya_no_visual.scn  gripper.scn  moby.scn  moby_no_visual.scn  nautilus.scn  nautilus_no_visual.scn  nautilus_segmentation_camera.scn  orca.scn  orca_no_visual.scn  orca_segmentation_camera.scn
stonefish_sim/launch/: drone_sim.launch.py  freya_sim.launch.py  moby_sim.launch.py  orca_sim.launch.py  simulation.launch.py  simulation_nogpu.launch.py  testing_template.launch.py  vortex_sim_launch.py
stonefish_sim/metadata/: README.md  looks.scn  materials.scn
stonefish_sim/objects/: README.md  box_seafloor.scn  cave.scn  default_seafloor.scn  dock.scn  pipe.scn  pipeline_task.scn  pool.scn  structure.scn  structure_task.scn  structure_valve_servo.scn  tacc_seafloor.scn
stonefish_sim/scenarios/: README.md  box.scn  cave.scn  default.scn  demo_world.scn  docking.scn  freya_demo.scn  freya_no_gpu.scn  moby_no_gpu.scn  nautilus_no_gpu.scn  orca_demo.scn  orca_freya_demo.scn  orca_no_gpu.scn  pipeline.scn  structure.scn  tacc.scn
stonefish_sim/scenarios/tests/: default_gpu.scn  default_no_gpu.scn
stonefish_sim/tasks/: README.md  docking_task.scn  pipeline_task.scn  structure_task.scn
stonefish_sim_interface/: CMakeLists.txt  package.xml
stonefish_sim_interface/launch/: stonefish_sim_interface.launch.py
stonefish_sim_interface/src/: stonefish_sim_interface.cpp
tasks/: docking_task.scn
vortex_sim_interface/: CMakeLists.txt  package.xml
vortex_sim_interface/include/vortex_sim_interface/: vortex_sim_interface.hpp
vortex_sim_interface/launch/: vortex_sim_interface.launch.py
vortex_sim_interface/src/: vortex_sim_interface.cpp
(+1 files in other folders)
