<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vortex_sim_interface</name>
  <version>0.0.0</version>
  <description>An interface to link vortex-auv to the simulator</description>
  <maintainer email="andeshog@stud.ntnu.no">vortex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>
  <depend>vortex_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>stonefish_ros2</depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
